# DreamEngine

./: Makefile  README.md  pyproject.toml
src/dreamengine/agents/: dream_agent.py
src/dreamengine/core/: kernel.py
src/dreamengine/llm/: llm_orchestrator.py  personas.py
src/dreamengine/memory/: vector_memory.py
src/dreamengine/memory/backends/: chroma_memory.py  faiss_memory.py
src/dreamengine/utils/: logger.py
